# imapper

./: .cspell.json  .cspell.txt  .gitignore  .quickdocs.yml  .template.yml  CONTRIBUTING.md  Dockerfile  Gruntfile.js  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  spago.dhall
.nyc_output/: 6d6675d8-9cb6-4f1d-b913-eaf3b54b240c.json
.nyc_output/processinfo/: 6d6675d8-9cb6-4f1d-b913-eaf3b54b240c.json  index.json
docs/: conf.py  index.rst
docs/sphinx/: conf.py
src/: __init__.py  __main__.py  models.py  parsers.py  senders.py  session.py  sweeper.py  utils.py
test/: Main.purs
tests/: test_parsers.py  test_utils.py
