[metadata]
name = imapper
version = 0.1.0

description = Imap
url = https://github.com/joellefkowitz/actions

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/joellefkowitz/actions
   CI            = https://github.com/joellefkowitz/actions
   Documentation = https://github.com/joellefkowitz/actions
   Source Code   = https://github.com/joellefkowitz/actions

classifiers =
    Intended Audience :: Developers

[options]
# Rename the package (metadata.name is the published/pypi name)
packages = imapper

# Map the new package name to its source directory
package_dir =
    imapper = src

# Apply the MANIFEST.in to include subpackages
include_package_data = True

python_requires = >= 3.6

setup_requires = 
    setuptools

install_requires =
    dataclasses
    docopts
    imap_tools
    safe_environ
    types-dataclasses

[options.packages.find]
exclude =
    tests
    
[options.extras_require]
linters =
    mypy
    pylint
    bandit

formatters =
    autoflake
    black
    isort

tests =
    coverage
    pytest-mocha
    pytest-sugar
    pytest
    tox

release =
    bump2version
    quickdocs
    twine
    wheel
